src/test/deca/context/valid/created/objet/name_class_2.deca
// Description :
// test de verification nom de class
//
// Resultats :
// ok

class Float {
    int x;
}
