src/test/deca/context/invalid/created/objet/name_class_3.deca
// Description :
// test de verification nom de class
//
// Resultats :
//      Ligne 7 : nom de la classe pas autorise

class float {
    int x;
}
